#unbound made it work on my rabo machine

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<mat-list>
+  <mat-list-item>
+    * Start eh simulation by clicking on 'Simulate'
+  </mat-list-item>
+
+</mat-list>
